[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usnan-fuse"
version = "0.1.0"
description = "FUSE filesystem for browsing NMRHub datasets"
requires-python = ">=3.10"
authors = [
    {name = "Jonathan Wedell"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "usnan>=0.3",
    "fusepy>=3.0",
    "platformdirs>=3.0",
]

[project.scripts]
usnan-fuse = "usnan_fuse.cli:main"

[tool.setuptools.packages.find]
include = ["usnan_fuse*"]
